sizes and spacing between components fixed

--- a/wp-content/themes/newclassrooms/components/component_newsletter/_newsletter.scss
+++ b/wp-content/themes/newclassrooms/components/component_newsletter/_newsletter.scss
@@ -13,9 +13,14 @@
 	input {
 		&[type="submit"] {
 			margin-left: 20px;
-			padding-left: 50px;
-			padding-right: 50px;
+			padding-left: 30px;
+			padding-right: 30px;
 			margin-bottom: 10px;
+
+			@include mediaquery('tablet-portrait') {
+				padding-left: 50px;
+				padding-right: 50px;
+			}
 		}
 
 		&[type="checkbox"] {
@@ -39,6 +44,18 @@
 			&[type="email"] {
 				border-color: $white;
 			}
+		}
+	}
+
+	&.newsletter-footer {
+		max-width: 300px;
+
+		&[type="submit"] {
+			padding-left: 24px;
+			padding-right: 24px;
+			flex-shrink: 0;
+			max-width: none;
+			margin-left: 0;
 		}
 	}
 }
