--- a/wp-content/themes/newclassrooms/gutenberg/blocks/block_button/_buttons.scss
+++ b/wp-content/themes/newclassrooms/gutenberg/blocks/block_button/_buttons.scss
@@ -10,16 +10,21 @@
 	color: $defaultTextColor;
 	cursor: pointer;
 	display: inline-flex;
-	font-size: px-to-rem(16px);
 	font-weight: 600;
 	line-height: 1;
 	overflow: hidden;
-	padding: $gap $gap*3 $gap;
 	position: relative;
 	text-transform: uppercase;
 	transition: background .4s ease-out, border-color .4s ease-out;
 	text-align: center;
 	z-index: 2;
+	padding: $gap $gap*2 $gap $gap;
+	font-size: px-to-rem(12px);
+
+	@include mediaquery(tablet-portrait) {
+		padding: $gap $gap*3 $gap;
+		font-size: px-to-rem(16px);
+	}
 
 	&.video-button {
 		padding-left: 20px;
@@ -32,9 +37,15 @@
 			border-radius: 100%;
 			content: '';
 			display: inline-block;
-			height: 25px;
-			margin-right: 35px;
-			width: 25px;
+			height: 20px;
+			margin-right: 30px;
+			width: 20px;
+
+			@include mediaquery(tablet-portrait) {
+				height: 25px;
+				margin-right: 35px;
+				width: 25px;
+			}
 		}
 	}
 
