--- a/wp-content/themes/newclassrooms/gutenberg/blocks/block_hero-slider/_hero-slider.scss
+++ b/wp-content/themes/newclassrooms/gutenberg/blocks/block_hero-slider/_hero-slider.scss
@@ -1,9 +1,10 @@
 /**** Component Hero Slider ****/
 //Component styles go here.
 .component-hero-slider {
-	height: 100%;
 	width: 100%;
+	height: 80vh;
 	min-height: 780px;
+	overflow: hidden;
 
 	.slides {
 		display: flex;
@@ -24,7 +25,7 @@
 
 		@include mediaquery('tablet-landscape') {
 			flex-direction: column;
-			justify-content: center;
+			// justify-content: center;
 		}
 
 		&.active {
@@ -69,14 +70,14 @@
     justify-content: center;
 		flex-direction: column;
 		z-index: 1;
-		padding: 90px 20px 30px;
+		padding: 90px 20px 32px;
 
 		@include mediaquery('tablet-landscape') {
 			padding: 0 20px;
 		}
 
 		@include mediaquery('xl2') {
-			max-width: $navWidth;
+			max-width: 1368px;
 			padding-left: 100px;
 		}
 	}
